package com.diguage.didp.decorator;

/**
 * ConcreteComponent 类
 *
 * @author D瓜哥, https://www.diguage.com/
 * @since 2017-05-23 09:09:48
 */
public class ConcreteComponent extends Component {
  public void operation() {
  }
}
